# sdl2_setup

./: CMakeLists.txt  README.md
